[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bloth"
version = "2.0.0"
description = "Ultra-Fast CUDA Kernel Library for LLM Training"
authors = [{name = "shell-bay"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/shell-bay/bloth"
Issues   = "https://github.com/shell-bay/bloth/issues"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
